force-app/main/default/objects/Product_Cycle_History__c/fields/Available_Credit_Amount__c.field-meta.xml
<CustomField>
    <fullName>Available_Credit_Amount__c</fullName>
    <label>Available Credit Amount</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>