force-app/main/default/objects/Product_Cycle_History__c/fields/Credit_Limit_Last_Changed_Amount__c.field-meta.xml
<CustomField>
    <fullName>Credit_Limit_Last_Changed_Amount__c</fullName>
    <label>Credit Limit Last Changed Amount</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>