force-app/main/default/objects/Product_Cycle_History__c/fields/Credit_Limit_Last_Changed_Date__c.field-meta.xml
<CustomField>
    <fullName>Credit_Limit_Last_Changed_Date__c</fullName>
    <label>Credit Limit Last Changed Date</label>
    <type>Date</type>
</CustomField>