force-app/main/default/objects/Product_Cycle_History__c/fields/Current_Average_Daily_Balance__c.field-meta.xml
<CustomField>
    <fullName>Current_Average_Daily_Balance__c</fullName>
    <label>Current Average Daily Balance</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>