force-app/main/default/objects/Product_Cycle_History__c/fields/Delinquency_Cycles__c.field-meta.xml
<CustomField>
    <fullName>Delinquency_Cycles__c</fullName>
    <label>Number of  Cycles  Delinquent</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>