force-app/main/default/objects/Product_Cycle_History__c/fields/Delinquency_Days__c.field-meta.xml
<CustomField>
    <fullName>Delinquency_Days__c</fullName>
    <label>Number of  days  delinquent</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>