force-app/main/default/objects/Product_Cycle_History__c/fields/External_Status_Current__c.field-meta.xml
<CustomField>
    <fullName>External_Status_Current__c</fullName>
    <label>External Status</label>
    <length>100</length>
    <type>Text</type>
</CustomField>