force-app/main/default/objects/Product_Cycle_History__c/fields/Internal_Status__c.field-meta.xml
<CustomField>
    <fullName>Internal_Status__c</fullName>
    <label>Internal Status</label>
    <length>100</length>
    <type>Text</type>
</CustomField>