force-app/main/default/objects/Product_Cycle_History__c/fields/Iteration_Number__c.field-meta.xml
<CustomField>
    <fullName>Iteration_Number__c</fullName>
    <label>Iteration Number</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>