force-app/main/default/objects/Product_Cycle_History__c/fields/Last_Delinquency_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Delinquency_Date__c</fullName>
    <label>Last Delinquency Date</label>
    <type>Date</type>
</CustomField>