force-app/main/default/objects/Product_Cycle_History__c/fields/Last_Payment_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Payment_Date__c</fullName>
    <label>Last Payment  Date</label>
    <type>Date</type>
</CustomField>