force-app/main/default/objects/Product_Cycle_History__c/fields/Last_Statement_Credit_Interest_Amount__c.field-meta.xml
<CustomField>
    <fullName>Last_Statement_Credit_Interest_Amount__c</fullName>
    <label>Last Statement  Credit Interest  Amount</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>