force-app/main/default/objects/Product_Cycle_History__c/fields/Late_Fee_Amount_Outstanding__c.field-meta.xml
<CustomField>
    <fullName>Late_Fee_Amount_Outstanding__c</fullName>
    <label>Late Fee  Amount  Outstanding</label>
    <precision>14</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>