force-app/main/default/objects/Product_Cycle_History__c/fields/Latest_NSFED_Date__c.field-meta.xml
<CustomField>
    <fullName>Latest_NSFED_Date__c</fullName>
    <label>Latest NSFED  Date</label>
    <type>DateTime</type>
</CustomField>