force-app/main/default/objects/Product_Cycle_History__c/fields/Other_Fee_Amount_Outstanding__c.field-meta.xml
<CustomField>
    <fullName>Other_Fee_Amount_Outstanding__c</fullName>
    <label>Other Fee  Amount  Outstanding</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>