force-app/main/default/objects/Product_Cycle_History__c/fields/Product_Last_Modified_By__c.field-meta.xml
<CustomField>
    <fullName>Product_Last_Modified_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product Last Modified By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Product_Snapshot</relationshipName>
    <type>Lookup</type>
</CustomField>