force-app/main/default/objects/Product_Cycle_History__c/fields/Product_Status__c.field-meta.xml
<CustomField>
    <fullName>Product_Status__c</fullName>
    <label>Product Status</label>
    <length>50</length>
    <type>Text</type>
</CustomField>