force-app/main/default/objects/Product_Cycle_History__c/fields/Source_System__c.field-meta.xml
<CustomField>
    <fullName>Source_System__c</fullName>
    <label>Source System</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>DebtNext</fullName>
            </value>
            <value>
                <fullName>FDR</fullName>
            </value>
            <value>
                <fullName>Megasys</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>