force-app/main/default/objects/Product_Cycle_History__c/fields/Times_NSF__c.field-meta.xml
<CustomField>
    <fullName>Times_NSF__c</fullName>
    <label>Times NSF</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>