force-app/main/default/objects/Product_Cycle_History__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Product__c</columns>
    <columns>Iteration_Number__c</columns>
    <columns>Last_Payment_Amount__c</columns>
    <columns>Card_Used_This_Month__c</columns>
    <columns>Available_Credit_Amount__c</columns>
    <columns>Credit_Limit__c</columns>
    <columns>Current_Balance__c</columns>
    <columns>Credit_Limit_Last_Changed_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>